remove getLast()